# xontrib-dracula

./: README.md  pyproject.toml
xontrib/: dracula.py
