[tool.poetry]
name = "xontrib-dracula"
version = "0.1.1"
description = "A Dracula theme for xonsh."
authors = ["Angus Hollands <goosey15@gmail.com>"]
license = "MIT"
packages = [
  { include = "xontrib" }
]

[tool.poetry.dependencies]
python = ">=3.6"
xonsh = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
